feat: workflows templates
